--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
+    "nodemon": "^3.0.2",
+    "open": "^10.0.2",
     "twilio": "^4.20.0"
   }
 }
